# wain

./: Cargo.toml
spec-test/: Cargo.toml  README.md
spec-test/src/: main.rs  parser.rs  runner.rs  wast.rs
spec-test/src/crash-tester/: main.rs
wain-ast/: Cargo.toml
wain-ast/src/: lib.rs  source.rs
wain-exec/: Cargo.toml
wain-exec/src/: cast.rs  globals.rs  import.rs  lib.rs  memory.rs  runtime.rs  stack.rs  table.rs  trap.rs  value.rs
wain-syntax-binary/: Cargo.toml
wain-syntax-binary/src/: error.rs  leb128.rs  lib.rs  parser.rs  source.rs
wain-syntax-text/: Cargo.toml
wain-syntax-text/src/: ast.rs  compose.rs  lexer.rs  lib.rs  parser.rs  source.rs  wat2wasm.rs
wain-validate/: Cargo.toml
wain-validate/src/: error.rs  insn.rs  lib.rs
